# kivyfun

./: .gitignore  app.py  buildozer.spec  kivyfun.kv  main.py  music.kv  my_log.txt  notes  pyproject.toml  test.py  testme.py  youtube_converter.py
app/: android.txt  downloader_thread.py  main.py  music.kv  selected_song.py  stderr  synchronizer.py  utils.py  ydl_logger.py  youtube_converter.py
app/meta/: XjxjqTGFNR4.json  gaU-XQ52Xwg.json  rgNbHDECfyM.json
old/: main_screens_setup.py  main_whole_app_here.py  music_screens_setup.kv
old/kivy_normal/: kivyfun.kv  main.py
old/testsound/: soundapp.kv  soundapp.py
testsound/: soundapp.py
