[tool.poetry]
name = "kivyfun"
version = "0.1.0"
description = ""
authors = ["patrick <chodowski.patrick@chalhoub.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"
kivymd = "^0.104.2"
youtube_dl = "^2021.6.6"
ffpyplayer = "^4.3.2"
Cython = "^0.29.24"
python-for-android = "^2020.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
